@@ -51,10 +51,10 @@ wills_spaceship_repair-hull_panel=Used in other spaceship parts.
 wills_spaceship_repair-wooden_coin_chest=Worth 1,000 coins when launched to the bank in a rocket.
 wills_spaceship_repair-iron_coin_chest=Worth 25,000 coins when launched to the bank in a rocket.
 wills_spaceship_repair-steel_coin_chest=Worth 250,000 coins when launched to the bank in a rocket.
-wills_spaceship_repair-empty_coin_delivery_capsule=After being merged with a coin chest can send the coins back to the bank vai a rocket.
-wills_spaceship_repair-wooden_coin_chest_delivery_capsule=Can pay back the back by launching in a rocket.
-wills_spaceship_repair-iron_coin_chest_delivery_capsule=Can pay back the back by launching in a rocket.
-wills_spaceship_repair-steel_coin_chest_delivery_capsule=Can pay back the back by launching in a rocket.
+wills_spaceship_repair-empty_coin_delivery_capsule=After being merged with a coin chest can send the coins back to the bank via a rocket.
+wills_spaceship_repair-wooden_coin_chest_delivery_capsule=Can pay back the bamk by launching in a rocket.
+wills_spaceship_repair-iron_coin_chest_delivery_capsule=Can pay back the bank by launching in a rocket.
+wills_spaceship_repair-steel_coin_chest_delivery_capsule=Can pay back the bank by launching in a rocket.
 
 
 
@@ -117,6 +117,21 @@ wills_spaceship_repair-wrong_ship_part_launched=Unneeded ship part launched and 
 wills_spaceship_repair-order_audit_table_written=All orders table written to your script-output folder
 wills_spaceship_repair-investments_table_written=Investments table written to your script-output folder
 wills_spaceship_repair-order_failed_penalty=Failed to deliver __1__ on time, customer refund required: __2__[img=item/coin]
+wills_spaceship_repair-investment_deleted_success=Investment index __1__ deleted. Investment by __2__ for __3__ invested amount.
+wills_spaceship_repair-investment_deleted_index_not_found=ERROR: Deleting investment index __1__ failed as not valid index.
+wills_spaceship_repair-investment_deleted_too_many_arguments=ERROR: Too many arguments to command Delete Investor: __1__
+wills_spaceship_repair-investment_deleted_index_not_valid_number=ERROR: Investor index must be a whole number for Delete Investor command arguments: __1__
+wills_spaceship_repair-investment_deleted_index_blank=ERROR: Investor index can not be blank in Delete Investor command arguments: __1__
+wills_spaceship_repair-investment_add_blank_investor_name=ERROR: Investor name can not be blank in Add Investor command arguments: __1__
+wills_spaceship_repair-investment_add_blank_investor_amount=ERROR: Investor amount can not be blank in Add Investor command arguments: __1__
+wills_spaceship_repair-investment_add_non_number_investor_amount=ERROR: Investor amount must be a whole number for Add Investor command arguments: __1__
+wills_spaceship_repair-investment_add_too_many_arguments=ERROR: Too many arguments to command Add Investor: __1__
+wills_spaceship_repair-delivery_pod_size_invalid_table=ERROR: setting "Item delivery pod size cash values", invalid table given
+wills_spaceship_repair-delivery_pod_size_invalid_ship_size=ERROR: setting "Item delivery pod size cash values", missing/invalid shipSize for entry __1__
+wills_spaceship_repair-delivery_pod_size_invalid_coin_cost=ERROR: setting "Item delivery pod size cash values", missing/invalid coinCost for entry __1__
+wills_spaceship_repair-delivery_pod_size_invalid_radius=ERROR: setting "Item delivery pod size cash values" missing/invalid radius for entry __1__
+wills_spaceship_repair-delivery_pod_size_=
+wills_spaceship_repair-delivery_pod_size_=
 
 
 
